se agrega configuración final y se ajustan las propiedades para la ejecución del proyecto